# PlayerPRO

./: .gitattributes  .gitignore  .gitmodules  669-Info.plist  AIFF-Info.plist  AMF-Info.plist  APPL-Info.plist  AUTHORS  Amplitude-Info.plist  AutoExec-Info.plist  Backwards-Info.plist  CMakeLists.txt  Cocoa-Info.plist  Complex Fade-Info.plist  Credits.rtf  Crop-Info.plist  CrossFade-Info.plist  DMF-Info.plist  Depth-Info.plist  Fade Note-Info.plist  Fade Volume-Info.plist  IT-Info.plist  Info.plist  Invert-Info.plist  LICENSE.txt  Length-Info.plist  MADH-Info.plist  MADI-Info.plist  MADfg-Info.plist  MED-Info.plist  MIDI-Info.plist  MINs-Info.plist  MOD-Info.plist  MTM-Info.plist  Makefile  Makefile-Mac  Makefile-linux  Makefile-other.am  Mix-Info.plist  Normalize-Info.plist  (+34 more)
(Proto)/: 3D.proto.h  (+74 more)
Examples/PPPlay/: CMakeLists.txt  PPPlay.c  PPPlay.vcxproj  PPPlay.vcxproj.filters  Read.TXT
Examples/PPPlay/ppplay.xcodeproj/: project.pbxproj
MADDriver.source/: AMF Plug.rsrc  APPL Plug  APPL Plug.rsrc  APPL Plug.xSYM  All Project  Be-DriverClass.cpp  Be-DriverClass.h  Be-PlugImport.c  CMakeLists.txt  CocoaFuncs.m  DMF Plug.rsrc  DelayOutPut.c  Effects.c  FileUtils.c  FileUtils.h  IT Plug  IT Plug Carbon  IT Plug Carbon.xSYM  IT Plug.rsrc  IT Plug.xSYM  Interrupt.c  Lin-PlugImport.c  MAD.h  MADDebugStr.m  MADDefs.h  MADDriver.c  MADDriver.h  MADFileUtils.h  MADH Plug  MADH Plug Carbon  MADH Plug Carbon.xSYM  MADH Plug.rsrc  MADH Plug.xSYM  MADI Plug  MADI Plug Carbon  MADI Plug Carbon.xSYM  MADI Plug.rsrc  MADI Plug.xSYM  MADLibrary Project  MADLibrary.68k.(2i, A5)  (+99 more)
MADDriver.source/AutoExec/: AEvent.c  AutoExec.µ  Burk.c  Exemple.Rsrc.r  Exemple.c  Exemple.h  Exemple.icns  Exemple.madi  TestMADH.MADH
MADDriver.source/AutoExec/Generateur Folder/: GENERATEUR.xSYM  Gene.c  GenerateurPPC v2  GenerateurPPC v2.old  GenerateurPPC v2.old2  List Code PlayerPRO  List Code PlayerPRO.sit  Print.c  gen  gen copy  gen.xSYM
MADDriver.source/AutoExec/Generateur Folder/GenerateurPPC v2 Data/: CWSettingsMacOS.stg
MADDriver.source/Import-Export/: 669.c  669.h  AMF.c  AMF.h  APPL.c  APPL.h  CFPlugin-bridge.c  CMakeLists.txt  DMF.c  DMF.h  IT.c  IT.h  MADH.c  MADH.h  MADI.c  MADI.h  MADfg.c  MADfg.h  MED.c  MED.h  MOD.h  MTM.c  MTM.h  Midi_Plug.rsrc.r  Mod.c  Okta.c  Okta.h  PlugExports-Mac.exp  S3M.c  S3M.h  ULT.c  ULT.h  UMX.c  UMX.h  XM.c  XM.h
MADDriver.source/Import-Export/669/: 669-Info.plist  669.c  669.vcxproj
MADDriver.source/Import-Export/AMF/: AMF-Info.plist  AMF.c  AMF.h  AMF.vcxproj
MADDriver.source/Import-Export/DMF/: DMF-Info.plist  DMF.c  DMF.h
MADDriver.source/Import-Export/IT/: IT-Info.plist  IT.c  IT.h  IT.vcxproj
MADDriver.source/Import-Export/ITv2/: IT Info.txt  ITv2-Info.plist  ITv2.c  ITv2.h
MADDriver.source/Import-Export/MADH/: MADH-Info.plist  MADH.c  MADH.h  MADH.vcxproj
MADDriver.source/Import-Export/MADI/: MADI-Info.plist  MADI.c  MADI.h  MADI.vcxproj
MADDriver.source/Import-Export/MADK/: MADK-Info.plist  MADK.c  MADK.h
MADDriver.source/Import-Export/MADfg/: MADfg-Info.plist  MADfg.c  MADfg.h  MADfg.vcxproj
MADDriver.source/Import-Export/MED/: MED-Info.plist  MED.c  MED.h  MED.vcxproj
MADDriver.source/Import-Export/MIDI Folder/: MIDI-Bridging-Header.h  MIDI-GM-Small.c  MIDI.c  MIDI.m  MIDI.pch  Midi-rsrc.h  PPMidiHelper.h  PPMidiHelper.m  PTMID.H  PTMID.c  PTMID.h  PTMIDINP.C  PTMIDINP.c  PTMIDSAV.C  PTMIDSAV.c  Progress.c  dls.h
MADDriver.source/Import-Export/MOD/: MOD-Info.plist  MOD.h  MOD.vcxproj  Mod.c
MADDriver.source/Import-Export/MTM/: MTM-Info.plist  MTM.c  MTM.vcxproj
MADDriver.source/Import-Export/Okta/: Okta-Info.plist  Okta.c  Okta.h  Okta.vcxproj
MADDriver.source/Import-Export/Plug-in example/: Example-Info.plist  Example.c  Example.h
MADDriver.source/Import-Export/S3M/: S3M-Info.plist  S3M.c  S3M.h  S3M.vcxproj
MADDriver.source/Import-Export/ULT/: ULT-Info.plist  ULT.c  ULT.h  ULT.vcxproj
MADDriver.source/Import-Export/UMX/: UMX-Info.plist  UMX.c  UMX.h  UMX.vcxproj
MADDriver.source/Import-Export/XM/: XM-Info.plist  XM.c  XM.h  XM.vcxproj
MADDriver.source/MADDriver.Source/: Be-DriverClass.cpp  Be-DriverClass.h  Be-PlugImport.c  ByteSwap.c  CocoaFuncs.m  DelayOutPut.c  Effects.c  FileUtils.c  FileUtils.h  Interrupt.c  Lin-PlugImport.c  Lin-alsa.c  MAD.h  MADDriver.h  MADTypeConversions.c  MADTypeConversions.h  MADTypeConversions.m  MIDI-Hardware-OSX.c  MIDI-Hardware-Stub.c  Mac-ASIO.c  Mac-FileUtils.c  Mac-PlugImport.c  Mac-SoundManager.c  MainDriver.c  MainDriverCarbon.c  Makefile.am  MyDebugStr.c  MySndPlayDB.c  MySndPlayDB.h  OSX-CoreAudio.c  OSX-CoreMIDI.c  OSX-PlugImport.c  OSX-PlugImport.m  OutPut8.c  PPDefs.h  PPPlug.h  PPPrivate.h  PlayerPROCore-OSX.pch  PlayerPROCore.def  PlayerPROCore.h  (+15 more)
MADDriver.source/MADDriver.Source/App Plug-in Code/: MADDigitalPluginWindowController.h  MADDigitalPluginWindowController.m  MADPluginWindowController.h  MADPluginWindowController.m  PPDigitalPluginWindowController.h  PPDigitalPluginWindowController.m  PPFilterPluginWindowController.h  PPFilterPluginWindowController.m  PPInstrumentPluginWindowController.m  PPPluginWindowController.h  PPPluginWindowController.m  SndUtils.c
MADDriver.source/MADDriver.Source/Import-Export/: 669.c  669.h  669.vcxproj  669_Plug.rsrc.r  AMF.c  AMF.h  AMF.vcxproj  AMF_Plug.rsrc.r  APPL.c  APPL_Plug.rsrc.r  CFPlugin-bridge.c  DMF.c  DMF.h  DMF.vcxproj  DMF_Plug.rsrc.r  IT.c  IT.h  IT_Plug.rsrc.r  MADH.c  MADH.h  MADH_Plug.rsrc.r  MADI.c  MADI.h  MADI.vcxproj  MADI_Plug.rsrc.r  MADfg.c  MADfg.h  MADfg.vcxproj  MADfg_Plug.rsrc.r  MED.c  MED.h  MED_Plug.rsrc.r  MOD.h  MOD_Plug.rsrc.r  MTM.c  MTM.h  MTM_Plug.rsrc.r  Midi_Plug.rsrc.r  Mod.c  OKTA_Plug.rsrc.r  (+16 more)
MADDriver.source/MADDriver.Source/Import-Export/IT/: IT.vcxproj
MADDriver.source/MADDriver.Source/Import-Export/MADH/: MADH.vcxproj
MADDriver.source/Resources/: InfoPlist.strings  PPCore-OSX.exp  PPCore-iOS.exp  PPCore-private.modulemap  PPCore.modulemap  PlayerPROCore-Info.plist
MADDriver.source/Resources/en.lproj/: InfoPlist.strings
MADDriver.source/SDL/: SDL-Audio.c  SDL-SDLMixer.c
(+2271 files in other folders)
